tests/fail/no_dataclass_definition.py
# in Bethon, classes must be explicitly a data class
# no '@dataclass' and its import generates an error
class Point:
    x: float
    y: float
